[package]
name = "attester"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
az-snp-vtpm = { version = "~0.2.1", default-features = false, features = ["attester"], optional = true }
log.workspace = true
occlum_dcap = { git = "https://github.com/occlum/occlum", rev = "dbe404f", optional = true }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tdx-attest-rs = { git = "https://github.com/intel/SGXDataCenterAttestationPrimitives", rev = "cc582e8be0c9010295c66fb58c59f74744017600", optional = true }
nix = {version = "0.26.2", optional = true }
async-trait = "0.1.71"
base64 = "0.21.2"
tokio = "1.0"

[features]
default = ["all-attesters"]
all-attesters = ["cca-attester"]

tdx-attester = ["tdx-attest-rs"]
occlum-attester = ["occlum_dcap"]
az-snp-vtpm-attester = ["az-snp-vtpm"]
cca-attester = ["nix"]